Fix bug with double border generation

--- a/src/utilities/borders.less
+++ b/src/utilities/borders.less
@@ -18,17 +18,6 @@
 
 @default-border-color: @border-dark-soft;
 
-// Base
-@border-width-scale:
-  '0' 0,
-  default 1px,
-  '2' 2px,
-  '4' 4px,
-  '8' 8px,
-;
-.define-border-widths(@border-width-scale; @default-border-color; @screens);
-
-// Colors
 @border-colors:
   'dark' @border-dark,
   'dark-soft' @border-dark-soft,
